gl33-master/src/test/deca/context/valid/others/bonAppelFonctionsBoolean.deca
//Test valid : appel des fonctions par les bons paramètres d'entrée (boolean) et par les bons valeurs de retour

class MyClass{
  boolean myFunc(boolean a){
    return a;
  }
}

{
  MyClass m = new MyClass();
  boolean b = m.myFunc(true);
}
